<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_margin="@dimen/_2sdp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/wisata_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_imgWisata"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_imgWisata"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_namaWisata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/nama_wisata"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:maxLength="50"
                    android:text="@string/alamat" />

                <TextView
                    android:id="@+id/tv_jenisWisata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:maxLength="50"
                    android:text="@string/jenis_wisata" />

                <TextView
                    android:id="@+id/tv_deskripsiWisata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:maxLength="50"
                    android:text="@string/deskripsi_singkat_wisata" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_profil"
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@drawable/button_circle"
                        android:contentDescription="@string/button"
                        android:text="@string/profil"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />

                    <Button
                        android:id="@+id/btn_ShareWisata"
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@drawable/button_circle"
                        android:contentDescription="@string/button"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>