<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_4sdp"
    android:background="@android:color/white"
    tools:context=".activity.detail.DetailWisataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/tv_namaDetailWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                tools:text="@string/nama_wisata" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backdropWisata"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/monumen" />

            <ImageView
                android:id="@+id/iv_imageDetailWisata"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/tv_alamatDetailWisata"
                app:layout_constraintStart_toStartOf="@id/tv_alamatDetailWisata"
                tools:srcCompat="@tools:sample/backgrounds/scenic[8]" />

            <TextView
                android:id="@+id/tv_alamatDetailWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|normal"
                app:layout_constraintEnd_toEndOf="@+id/iv_backdropWisata"
                app:layout_constraintStart_toStartOf="@+id/iv_backdropWisata"
                app:layout_constraintTop_toBottomOf="@+id/iv_backdropWisata"
                tools:text="Alamat Detail Wisata" />

            <TextView
                android:id="@+id/tv_jenisDetailWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|normal"
                app:layout_constraintEnd_toEndOf="@+id/tv_alamatDetailWisata"
                app:layout_constraintStart_toStartOf="@+id/tv_alamatDetailWisata"
                app:layout_constraintTop_toBottomOf="@+id/tv_alamatDetailWisata"
                tools:text="Jenis Wisata" />

            <TextView
                android:id="@+id/tv_deskripsiDetailWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/deskripsi_wisata"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenisDetailWisata" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>